--- a/kaskad/css/mnemo-kotelnaya.css
+++ b/kaskad/css/mnemo-kotelnaya.css
@@ -1,3 +1,84 @@
+/* fonts */
+@font-face {
+  font-family: "Bitter";
+  font-display: swap;
+  src: url("../fonts/Bitter-SemiBold.woff2") format("woff2"), url("../fonts/Bitter-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Bitter";
+  font-display: swap;
+  src: url("../fonts/Bitter-Regular.woff2") format("woff2"), url("../fonts/Bitter-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Bitter";
+  font-display: swap;
+  src: url("../fonts/Bitter-Medium.woff2") format("woff2"), url("../fonts/Bitter-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  font-display: swap;
+  src: url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  font-display: swap;
+  src: url("../fonts/Gilroy-Medium.woff2") format("woff2"), url("../fonts/Gilroy-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  font-display: swap;
+  src: url("../fonts/Gilroy-Regular.woff2") format("woff2"), url("../fonts/Gilroy-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  font-display: swap;
+  src: url("../fonts/Gilroy-Semibold.woff2") format("woff2"), url("../fonts/Gilroy-Semibold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-display: swap;
+  src: url("../fonts/Oswald-SemiBold.woff2") format("woff2"), url("../fonts/Oswald-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-display: swap;
+  src: url("../fonts/Oswald-Regular.woff2") format("woff2"), url("../fonts/Oswald-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-display: swap;
+  src: url("../fonts/Oswald-Medium.woff2") format("woff2"), url("../fonts/Oswald-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
 *,
 *::before,
 *::after {
@@ -52,12 +133,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 .mnemo__title {
-  max-width: 1000px;
+  max-width: 1100px;
+  min-width: 1050px;
   display: flex;
   flex-direction: column;
   margin-top: 0;
   margin-bottom: 0;
   text-align: center;
+  font-family: 'Bitter', sans-serif;
   font-size: 32px;
   line-height: 32px;
   font-weight: 600;
@@ -72,9 +155,9 @@ body::-webkit-scrollbar-thumb {
 
 .mnemo__text {
   position: absolute;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 600;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Bitter', sans-serif;
   line-height: 14px;
   color: green;
   text-align: center;
@@ -264,6 +347,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   height: 100%;
   max-width: 70px;
+  font-family: 'Bitter', sans-serif;
   font-size: 14px;
   line-height: 14px;
   font-weight: 600;
@@ -613,6 +697,7 @@ body::-webkit-scrollbar-thumb {
 
 .mnemo__param-box--btn {
   padding: 5px;
+  font-family: 'Bitter', sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 600;
@@ -623,6 +708,7 @@ body::-webkit-scrollbar-thumb {
 
 .mnemo__modal-box--btn {
   padding: 5px;
+  font-family: 'Bitter', sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 600;
@@ -731,6 +817,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .mnemo__param-clue-div {
+  font-family: 'Bitter', sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -738,6 +825,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .mnemo__param-clue-span {
+  font-family: 'Bitter', sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 600;
@@ -745,21 +833,21 @@ body::-webkit-scrollbar-thumb {
 }
 
 .razrezhenie-clue {
-  width: 215px;
+  width: 216px;
   top: -104px;
   left: -62px;
 }
 
 .gaz-clue {
-  width: 175px;
+  width: 190px;
   top: -103px;
-  left: -31px;
+  left: -42px;
 }
 
 .vozduh-clue {
-  width: 175px;
+  width: 190px;
   top: -103px;
-  left: -18px;
+  left: -27px;
 }
 
 .par-clue {
@@ -769,9 +857,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .uroven-clue {
-  width: 195px;
-  top: -108px;
-  left: 14px;
+  width: 200px;
+  top: -100px;
+  left: 11px;
 }
 
 .mnemo__param-clue-content--level {
@@ -839,7 +927,7 @@ body::-webkit-scrollbar-thumb {
 
 .mnemo__modal-active {
   position: absolute;
-  width: 400px;
+  width: 500px;
   height: 50px;
   top: 24%;
   left: 35%;
@@ -852,8 +940,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .mnemo__modal-active.enabled {
-  height: 500px;
-  transition: height .6s ease-in-out;
+  height: 600px;
+  transition: height .4s ease-in-out;
 }
 
 .mnemo__modal-title {
@@ -867,9 +955,10 @@ body::-webkit-scrollbar-thumb {
 
 .mnemo__modal-title-text {
   position: relative;
-  font-size: 20px;
+  font-size: 28px;
+  font-family: 'Bitter', sans-serif;
   line-height: 24px;
-  color: green;
+  color: black;
   font-weight: 600;
   text-decoration: none;
 }
@@ -909,46 +998,18 @@ body::-webkit-scrollbar-thumb {
   position: relative;
   font-size: 16px;
   line-height: 24px;
-  color: green;
+  color: black;
   font-weight: 500;
-  text-decoration: none;
-  transition: color 0.3s ease-in-out;
-}
-
-.modal-content__link::before {
-  content: '';
-  position: absolute;
-  bottom: -5px;
-  left: 0;
-  z-index: 3;
-  width: 0;
-  height: 1px;
-  background-color: green;
-  transition: width .3s ease-in-out;
-}
-
-.modal-content__link:hover::before {
-  width: 100%;
-}
-
-.modal-content__link:active::before {
-  width: 100%;
-}
-
-.modal-content__link:focus::before {
-  width: 100%;
-}
-
-.modal-content__link:focus {
-  outline: none;
+  font-family: 'Bitter', sans-serif;
 }
 
 .modal-content__link-download {
-  padding: 7px;
-  font-size: 12px;
+  padding: 6px 10px;
+  font-size: 15px;
   line-height: 14px;
   color: green;
-  font-weight: 600;
+  font-weight: 500;
+  font-family: 'Bitter', sans-serif;
   text-decoration: none;
   border: 2px solid green;
   transition: color .3s ease-in-out, background-color .3s ease-in-out;
@@ -977,8 +1038,99 @@ body::-webkit-scrollbar-thumb {
   border-right: 2px solid green;
 }
 
+.modal-content__link-download-solo {
+  padding: 6px 10px;
+  font-size: 15px;
+  line-height: 14px;
+  color: green;
+  font-family: 'Bitter', sans-serif;
+  font-weight: 500;
+  text-decoration: none;
+  border: 2px solid green;
+  transition: color .3s ease-in-out, background-color .3s ease-in-out;
+}
+
+
+
+.modal-content__link-download-solo:hover {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-download-solo:active {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-download-solo:focus {
+  background-color: green;
+  color: white;
+}
+
 .modal-content__link-container {
   display: flex;
+}
+
+.modal__accordion {
+  margin-bottom: 10px;
+}
+
+.modal__accordion-title {
+  display: block;
+  padding: 3px;
+  cursor: pointer;
+  font-family: 'Bitter', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: green;
+  background-color: white;
+
+  border: 1px green solid;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.modal__accordion-title:hover {
+  color: white;
+  background-color: green;
+}
+
+.modal__accordion-title:active {
+  color: white;
+  background-color: green;
+}
+
+.modal__accordion-title.enabled {
+  color: white;
+  background-color: green;
+}
+
+
+.modal__accordion-content {
+  margin: 0;
+  padding: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-height: 0;
+  font-size: 30px;
+  line-height: 36px;
+  list-style-type: none;
+  transition: max-height .3s ease-in-out;
+  overflow: hidden;
+}
+
+.modal__accordion-content-item {
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-content__link {
+  margin-right: 30px;
 }
 
 
